--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
     "@tanstack/react-query": "^5.28.0",
     "@tanstack/react-table": "^8.13.0",
     "axios": "^1.6.7",
     "chart.js": "^4.4.1",
+    "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
     "lucide-react": "^0.344.0",
     "react": "^18.2.0",
@@ -16,6 +18,7 @@
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.22.1",
     "recharts": "^2.12.0",
+    "tailwind-merge": "^2.2.1",
     "zustand": "^4.5.1"
   },
   "devDependencies": {
